# SmokeGuard

./: .gitignore  CONFIG.md  README.md  app.py  c.py  config.json  control_panel.py  main.py  pyproject.toml  requirements.txt  reset.bat  reset.sh  setup.bat  setup.cfg  setup.sh
classtype/: __init__.py  metadata.py
cmd/: args.py
config/: config.json  model.py  parameter.py
funcs/: __init__.py
gui/: about.py  dialog.py  proxy.py  snapshot.py  vars.py  window.py
gui/images/: images.json
gui/layout/: camera.py  parameter.py
imageio/: image.py
layout/: camera.py  parameter.py  snapshot.py  window.py
lib/: cache.py  dependency.py  entry.py  handler.py  hardware.py  log.py  process_handler.py
lib/args/: handler.py
lib/connection/: internet.py
lib/logger/: __init__.py  default.py
libs/: cache.py  dependency.py  exec.py  hardware.py  log.py
meta/: __init__.py  bridge.py  cache.py  console.py  count.py  cuda.py  exceptions.py  exec.py  flags.py  fps.py  frame.py  general.py  git.py  image.py  inference.py  io.py  logger.py  namespaces.py  packets.py  repo.py  requirements.py  schema.py  signal.py  thread.py
pkg/: attribute.py  cache.py  cfg.py  checker.py  color.py  cuda.py  exec.py  image.py  inference.py  logging.py  recorder.py  requirements.py
src/: __init__.py  camera.py  parameter.py  snapshot.py  window.py
tests/: test_image_io.py
threads/: __init__.py  camera.py  inference.py  model.py  thread.py  threader.py
utility/: color.py  store.py  validate.py
validation/: __init__.py  model.py
validator/: requirements.py
(+20 files in other folders)
